--- a/00 - Inbox/1744799462.md
+++ b/00 - Inbox/1744799462.md
@@ -6,3 +6,4 @@ links:
 date: 2025-04-16
 ---
 Fast, programmer-managed on-chip memory shared among threads in a thread block. Acts as a user-controlled cache to reduce global memory accesses, critical for optimizing performance in algorithms like matrix multiplication.
+![[Pasted image 20250417080021.png]]
