--- a/00 - Inbox/1744799197.md
+++ b/00 - Inbox/1744799197.md
@@ -5,4 +5,4 @@ links:
   - "[[1744799109|GPU architecture]]"
 date: 2025-04-16
 ---
-The SM is the fundamental processing unit in a GPU, consisting of multiple CUDA cores (or similar execution units). It executes threads in warps (groups of 32 threads) via SIMT (Single Instruction, Multiple Thread) parallelism. Each SM has its own registers, shared memory, and scheduler, enabling fine-grained parallelism.
+The SM is the fundamental processing unit in a GPU, consisting of multiple CUDA cores (or similar execution units). It executes threads in warps (groups of 32 threads) via SIMT (Single Instruction, Multiple Thread) parallelism. Each SM hzas its own registers, shared memory, and scheduler, enabling fine-grained parallelism.
