--- a/01 - Literature Notes/1744815052.md
+++ b/01 - Literature Notes/1744815052.md
@@ -14,6 +14,9 @@ links:
 
 ## 🧠 Main Ideas / Summary
 - We need performance metrics to see how the resources available in the hardware are being utilized.
+- We should minimize control divergence to increase SIMD efficiency.
+- Shared memory tiling can be used to increase data reuse.
+
 
 ---
 
